Tweaking CSS in odd.css to solve layout problem with long attribute names in reference pages. Hope I have the right file.

--- a/Stylesheets/odd.css
+++ b/Stylesheets/odd.css
@@ -77,12 +77,12 @@ table.attList {
 }
 td.odd_label {
     vertical-align: top;
-    width: 10%;
+    width: 15em;
     font-weight: bold;
 }
 td.odd_value {
     vertical-align: top;
-    width: 90%;
+    max-width: 90%;
 }
 table.attDef {
     table-layout: fixed;
